рефакторинг (в частности Transform), апдейт TitleScreen, новая иконка и заголовок окна, апдейт .gitignore, добавлена опция вертикальной синхронизации, замена строковых литералов на nameof в инициализаторах StateBinding полей

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,7 @@ nunit-*.xml
 
 .vs
 *.user
-[Bb]in/
-[Oo]bj/
 obj_core
+*Properties/
+/DuckGame/Properties/launchSettings.json
+/DuckGame/Properties/launchSettings.json
