--- a/DuckGame/DuckGame.csproj
+++ b/DuckGame/DuckGame.csproj
@@ -4,19 +4,13 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net10.0-windows</TargetFramework>
     <Nullable>disable</Nullable>
-    <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>disable</ImplicitUsings>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <StartupObject>DGWindows.WindowsPlatformStartup</StartupObject>
 	  <OutDir>$(SolutionDir)bin</OutDir>
-	  <ApplicationIcon>app.ico</ApplicationIcon>
 	  <PlatformTarget>AnyCPU</PlatformTarget>
 	  <RunPostBuildEvent>Always</RunPostBuildEvent>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Content Include="app.ico" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="NAudio" Version="2.2.1" />
@@ -26,7 +20,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CrashWindow\CrashWindow.csproj" />
     <ProjectReference Include="..\FNA\FNA.Core.csproj" />
     <ProjectReference Include="..\Steam\Steam.csproj" />
   </ItemGroup>
@@ -34,6 +27,12 @@
   <ItemGroup>
     <None Update="Content\*.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="DuckGame.bmp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
